--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,8 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=donation;UserId=dbuser;Password=password"
+    "DefaultConnection": "server=localhost;database=datadonation;user=root;password=example"
   }
 }
