--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,10 @@ version: '3.4'
 
 services:
   db:
-    image: 'postgres:13'
+    image: mysql
     environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=dbuser
-      - POSTGRES_DB=donation
+      MYSQL_USER: dbuser
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: example
     ports:
-      - 5432:5432
-#   interface:
-#     image: dpage/pgadmin4
-#     environment:
-#       - PGADMIN_DEFAULT_EMAIL=admin@test.com
-#       - PGADMIN_DEFAULT_PASSWORD=admin
-#     ports:
-#       - 80:80
+      - 3306:3306
