update to net6  - solves database connection issue

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=datadonation;user=root;password=example"
+    "DefaultConnection": "server=localhost;database=datadonation;user=root;password=example;OldGuids=true"
   }
 }
