--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=datadonation;user=root;password=example"
+    "DefaultConnection": "server=localhost;database=datadonation;user=root;password=example;OldGuids=true"
   }
 }
