--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   db:
-    image: mysql
+    image: mysql:8.0.29
     environment:
       MYSQL_USER: dbuser
       MYSQL_PASSWORD: password
