--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,11 +4,16 @@ image:
 
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
+  - name: Database
+    command: |
+      docker-compose up
+      gp sync-done database
+
   - name: Backend
     before: | 
       dotnet tool install --global dotnet-ef
       export PATH="$PATH:$HOME/.dotnet/tools/"
-#      cp example.env .env
+    init: gp sync-await database
     command: |
       dotnet restore
       dotnet watch run
