add rest client extension

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -33,6 +33,7 @@ vscode:
     - esbenp.prettier-vscode
     - k--kato.docomment
     - muhammad-sammy.csharp
+    - humao.rest-client
 
 github:
   prebuilds:
