--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,6 +15,7 @@ tasks:
       export PATH="$PATH:$HOME/.dotnet/tools/"
     init: gp sync-await database
     command: |
+      cd api
       dotnet restore
       dotnet watch run
     openMode: split-right
