--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,47 +1,1 @@
-
-image:
-  file: .gitpod.Dockerfile
-
-# List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
-tasks:
-  - name: Database
-    command: |
-      docker-compose up
-      gp sync-done database
-
-  - name: Backend
-    before: | 
-      dotnet tool install --global dotnet-ef
-      export PATH="$PATH:$HOME/.dotnet/tools/"
-    init: gp sync-await database
-    command: |
-      cd api
-      dotnet restore
-      dotnet watch run
-    openMode: split-right
-
-# List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
-ports:
-  - port: 5000
-    onOpen: notify
-  - port: 5001
-    onOpen: ignore
-
-vscode:
-  extensions:
-    - ms-azuretools.vscode-docker
-    - angular.ng-template
-    - esbenp.prettier-vscode
-    - k--kato.docomment
-    - muhammad-sammy.csharp
-    - humao.rest-client
-
-github:
-  prebuilds:
-    master: true
-    branches: true
-    pullRequests: true
-    pullRequestsFromForks: true
-    addCheck: false
-    addComment: false
-    addBadge: true
+mainConfiguration: https://github.com/OSPRS/QuestionnaireApp
