add api to build output

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,9 +15,7 @@ concurrency:
   
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -30,20 +28,39 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - name: Build Executables
+    - name: Make Artifact Folders
+      run: |
+        mkdir out
+        mkdir out/decrypt-tool
+        mkdir out/api
+    - name: Build Decrypt-Tool
       run: |
         cd decrypt-tool
         dotnet publish --runtime win-x64 --configuration Release -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true
         dotnet publish --runtime linux-x64 --configuration Release -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true
         cd ..
-        mkdir out
-        cp decrypt-tool/bin/Release/net6.0/linux-x64/publish/decrypt-tool out/decrypt-tool
-        cp decrypt-tool/bin/Release/net6.0/win-x64/publish/decrypt-tool.exe out/decrypt-tool.exe
+        cp decrypt-tool/bin/Release/net6.0/linux-x64/publish/decrypt-tool out/decrypt-tool/decrypt-tool
+        cp decrypt-tool/bin/Release/net6.0/win-x64/publish/decrypt-tool.exe out/decrypt-tool/decrypt-tool.exe
+    - name: Build API
+      run: |
+        cd api
+        dotnet publish --runtime win-x64 --configuration Release -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true
+        dotnet publish --runtime linux-x64 --configuration Release -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true
+        cd ..
+        cp -r api/bin/Release/net6.0/publish/* out/api/
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
       with:
         # Artifact name
-        name: executables
+        name: api
         # A file, directory or wildcard pattern that describes what to upload
-        path: out
+        path: out/api
+        if-no-files-found: error
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.1
+      with:
+        # Artifact name
+        name: decrypt-tool
+        # A file, directory or wildcard pattern that describes what to upload
+        path: out/decrypt-tool
         if-no-files-found: error
