--- a/.gitignore
+++ b/.gitignore
@@ -446,3 +446,9 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Decrypt-Tool Specific
+keys/
+
+*.pem
+*.csv
