--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -64,3 +64,11 @@ jobs:
         # A file, directory or wildcard pattern that describes what to upload
         path: out/decrypt-tool
         if-no-files-found: error
+
+    - uses: "marvinpinto/action-automatic-releases@latest"
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "latest"
+        title: "Latest Release"
+        files: |
+          out/decrypt-tool/*
