add gif to readme
Co-authored-by: Restyled.io <commits@restyled.io>
Co-authored-by: DanielHabenicht <DanielHabenicht@users.noreply.github.com>

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,8 +31,7 @@ jobs:
     - name: Test-Bats
       run: | 
         cd tests-bats
-        npx bats decrypt-tool.bats
-
+        npx bats decrypt-tool.bats --filter '[^generategif]'
     - name: Make Artifact Folders
       run: |
         mkdir out
@@ -71,6 +70,7 @@ jobs:
         if-no-files-found: error
 
     - uses: "marvinpinto/action-automatic-releases@latest"
+      if: github.ref == 'refs/heads/main'
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "latest"
